# cyber-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.json
.github/workflows/: deploy.yml
backend/: output.json  pyproject.toml
backend/joint/: __init__.py  ai.py  db.py  env.py  logger.py  main.py  models.py  util.py
backend/joint/templates/: AI_MSG.md  __init__.py
backend/joint/templates/prompts/: PROCESS_EVENT.md
docker/builds/: backend.Dockerfile  frontend.Dockerfile
frontend/: .prettierignore  build.js  package-lock.json  package.json  tsconfig.json
frontend/src/: charts.tsx  config.ts  events.tsx  index.html  index.tsx  upload.tsx
src/: main.py
src/templates/prompts/: PROCESS_EVENT.md
