[tool.poetry]
name = "joint"
version = "0.1.0"
description = ""
authors = ["Hunter Wittenborn <hw0055@uah.edu>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "<4,>=3.8"
fastapi = {extras = ["all"], version = "^0.115.4"}
jinja2 = "^3.1.4"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
anthropic = {extras = ["bedrock"], version = "^0.39.0"}
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
boto3 = "^1.35.60"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
mypy = "^1.13.0"

[tool.poetry.scripts]
joint = "joint:main.main"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
